--- a/spring-crud/src/main/resources/application.properties
+++ b/spring-crud/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/api_spring_formulario_basico_1
 spring.datasource.username=root
 spring.datasource.password=admim
 spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8080
